--- a/client/src/_templates_ssr/index_index.njk
+++ b/client/src/_templates_ssr/index_index.njk
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Backbay: A Web integrated development environment.</title>
+  <title>qvk: A Web integrated development environment.</title>
 </head>
 <body>
 <div class="welcome">
   <div reminder>
-    <h2>欢迎</h2>
+    <h2>欢迎使用qvk创建开发环境</h2>
     <p><a href="/index/pixel">H5必知必会之像素级还级设计稿DEMO</a></p>
   </div>
 </div>
