refine welcome page

--- a/client/src/_static/css/index_index.scss
+++ b/client/src/_static/css/index_index.scss
@@ -5,6 +5,7 @@ html, body {
 .welcome {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
