--- a/client/src/_templates_ssr/index_index.njk
+++ b/client/src/_templates_ssr/index_index.njk
@@ -5,13 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>qvk: A Web integrated development environment.</title>
+  <link href="https://fonts.speaker.360.cn/css?family=fz_cuyansong&apiKey=a68ad05b55aeaa7d" rel="stylesheet">
 </head>
 <body>
 <div class="welcome">
-  <div reminder>
-    <h2>欢迎使用qvk创建开发环境</h2>
-    <p><a href="/index/pixel">H5必知必会之像素级还级设计稿DEMO</a></p>
-  </div>
+  <img width="160" src="https://p5.ssl.qhimg.com/t010e2c6a39810e3b7c.png">
+  <h2 style="font-family: fz_cuyansong, serif;">欢迎使用qvk创建开发环境</h2>
 </div>
 </body>
 </html>
