补充SPA示例及相关插件

--- a/client/src/templates/index_demo.njk
+++ b/client/src/templates/index_demo.njk
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>qvk: A Web integrated development environment.</title>
-  <link href="https://use.fonts.360.cn/css?family=fz_cuyansong&apiKey=a68ad05b55aeaa7d" rel="stylesheet">
+  {# <link async href="https://use.fonts.360.cn/css?family=fz_cuyansong&apiKey=a68ad05b55aeaa7d" rel="stylesheet"> #}
 </head>
 <body>
 <div class="welcome">
