--- a/client/src/templates/default.njk
+++ b/client/src/templates/default.njk
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link ref="icon" href="//s5.ssl.qhimg.com/static/1aa5f9af1fe7a62a.ico">
-  <title>Vue应用</title>
+  <title>SPA应用</title>
 </head>
 <body>
 <div id="app"></div>
