首页添加demo链接

--- a/client/src/templates/ssrdemo.njk
+++ b/client/src/templates/ssrdemo.njk
@@ -11,6 +11,17 @@
 <div class="welcome">
   <img width="160" src="https://p5.ssl.qhimg.com/t010e2c6a39810e3b7c.png">
   <h2 style="font-family: fz_cuyansong, serif;">欢迎使用qvk创建开发环境</h2>
+  <ul class="demolink">
+  <li>
+  <a href="/vuedemo" target="_blank">Vue Demo</a>
+  </li>
+  <li>
+  <a href="/reactdemo" target="_blank">React Demo</a>
+  </li>
+  <li>
+  <a href="/sveltedemo" target="_blank">Svelte Demo</a>
+  </li>
+  </ul>
 </div>
 </body>
 </html>
