--- a/client/src/_static/css/index_index.scss
+++ b/client/src/_static/css/index_index.scss
@@ -8,4 +8,12 @@ html, body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 12px;
+  .demolink {
+    margin: 0;
+    a {
+      text-decoration: none;
+      color: green;
+    }
+  }
 }
